force-app/main/default/objects/inspire1__Project_Portfolio__c/inspire1__Project_Portfolio__c.object-meta.xml
<CustomObject>
    <description>Inspire Planner - A collection of projects in a summary view.</description>
    <label>Portfolio</label>
    <nameField>
        <label>Portfolio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolios</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>