force-app/main/default/objects/inspire1__Project_Portfolio__c/fields/inspire1__Default_User_Portfolio_Project_Settings__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Default_User_Portfolio_Project_Settings__c</fullName>
    <label>Default User Portfolio Project Settings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>