force-app/main/default/objects/inspire1__Project_Portfolio__c/fields/inspire1__Description__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>