force-app/main/default/objects/inspire1__Project_Portfolio__c/fields/inspire1__Is_Dynamic__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Is_Dynamic__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Creates a dynamic portfolio</inlineHelpText>
    <label>Is Dynamic</label>
    <type>Checkbox</type>
</CustomField>