force-app/main/default/objects/inspire1__Project_Portfolio__c/fields/inspire1__List_View_ID__c.field-meta.xml
<CustomField>
    <fullName>inspire1__List_View_ID__c</fullName>
    <label>List View ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>