force-app/main/default/objects/inspire1__Project_Portfolio__c/validationRules/inspire1__Is_Dynamic_Read_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>inspire1__Is_Dynamic_Read_Only</fullName>
    <active>true</active>
    <description>is_dynamic field is read only after record is created</description>
    <errorConditionFormula>ISCHANGED(inspire1__Is_Dynamic__c)</errorConditionFormula>
    <errorDisplayField>inspire1__Is_Dynamic__c</errorDisplayField>
    <errorMessage>This field cannot be changed after the record is created.</errorMessage>
</ValidationRule>