force-app/main/default/objects/inspire1__Project_Portfolio__c/listViews/inspire1__All.listView-meta.xml
<ListView>
    <fullName>inspire1__All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>